# bhattacharyya-estimator

./: Cargo.toml  Readme.md
docs/: book.typ  reading-material.md
src/: constraint.rs  lib.rs  mixed.rs
tests/: astm-2000-standard-spectrum-e490.csv  distribution-std.rs  evalue.rs  fraunhofer.rs  mix-of-std.rs  vs-ding-mullhaupt.rs
