[package]
name = "estimated-hellinger"
version = "0.0.0"
edition = "2021"
publish = false
license = "EUPL-1.1+"

[dependencies.statrs]
version = "0.18"
optional = true
default-features = false

[features]
default = ["statrs"]
statrs = ["dep:statrs"]

[dev-dependencies]
rand = "0.8.5"
statrs = { version = "*", default-features = false, features = ["rand"] }

[[test]]
name = "distribution-std"
path = "tests/distribution-std.rs"
required-features = ["statrs"]
